--- a/scss/pages/_tarifas.scss
+++ b/scss/pages/_tarifas.scss
@@ -34,7 +34,7 @@
             a {
                 @extend %masInfo;
                 margin-bottom: 20px;
-                color: green;
+                color: red;
 
                 &:hover {
                     color: brown;
