--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,27 +1,29 @@
-
- .llegar {
-    display:flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    justify-content: center;
-    width: 100%;
- }
-.llegar iframe{
-    margin: 0 65px;
-    border-radius: 10px;
+.row {
+   margin-bottom: 25px;
 }
- .estamos{
-    width: 70%;
- }
- .asideContacto {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 100%;
- }
- .asideImage {
-    width: 250px;
-    height: 200px;
-    padding: 5px 0px;
-    margin-right: 5px;
- }
+.mapaUbicacion {
+
+   display:flex;
+   height: 100%;
+   width: 100%;
+   justify-content: space-between;
+   align-items: flex-start;
+   flex-wrap: wrap;
+   margin-top: 25px;
+   margin-bottom: 25px;
+
+   .llegar {
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+
+      iframe{
+         border-radius: 10px;
+         height: 825px;
+     }
+   }
+   .estamos{
+      width: 50%;
+   }
+}
+
