--- a/scss/pages/_habitaciones.scss
+++ b/scss/pages/_habitaciones.scss
@@ -1,3 +1,6 @@
+.mobile {
+    display:none
+}
 .Habitaciones {
     display:flex;
     flex-direction: column;
@@ -14,13 +17,11 @@
     }
 }
 .suite {
-    display:flex;
-    flex-wrap: wrap;
+    
     margin: 20px;
 
     .suiteMatrimonial{
         display:flex;
-        align-items: start;
         flex-direction: row-reverse;
         width: 100%;
         padding-bottom: 25px;
@@ -29,11 +30,6 @@
             width: 50%;
         }
     }
-    .atardecer {
-        height: 450px;
-        width: 800px;
-    }
-
     .suiteInfo {
         padding: 45px;
         margin-top: 50px;
