--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -58,6 +58,7 @@
     }
     p {
         text-align: center;
+        padding-bottom: 25px;
         margin-bottom: 10px;
         padding-left: 10px;
         padding-right: 10px;
