--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -59,6 +59,9 @@ header {
     }
 
     img {
-        width: 100px;
+        width: 65px;
+    }
+    .button-navbar {
+        color: white;
     }
 }
